@@ -24,8 +24,8 @@ $TCA['tx_oelib_test'] = array(
 			'endtime' => 'endtime',
 		),
 		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY) . 'tca.php',
-		'iconfile' => t3lib_extMgm::extRelPath($_EXTKEY) . 'icon_tx_oelib_test.gif',
-	)
+		'iconfile' => t3lib_extMgm::extRelPath($_EXTKEY) . 'Resources/Public/Icons/Test.gif',
+	),
 );
 
 $TCA['tx_oelib_testchild'] = array(
@@ -42,6 +42,6 @@ $TCA['tx_oelib_testchild'] = array(
 		'default_sortby' => 'ORDER BY uid',
 		'delete' => 'deleted',
 		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY) . 'tca.php',
-		'iconfile' => t3lib_extMgm::extRelPath($_EXTKEY) . 'icon_tx_oelib_test.gif',
-	)
+		'iconfile' => t3lib_extMgm::extRelPath($_EXTKEY) . 'Resources/Public/Icons/Test.gif',
+	),
 );
